--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -33,7 +33,7 @@
         <hr style="width: 25%;margin: auto;color: #565558;">
         <div class="my-2">
             <div class="mb-2 d-flex justify-content-between w-100">
-              <span style="color: darkgrey;">alkapida.com</span>
+              <b style="color: darkgrey; font-family: system-ui;">alkapida.com</b>
               <strong style="font-size: x-small; margin-top: 1%;">09.2023 / Present</strong>
             </div>
             <div style="padding-left: 2%;" class="mb-4" *ngFor="let item of experienceitems">
@@ -83,9 +83,21 @@
         <div class="grid-1">6</div>
     </div>    
 </div>  
-<div #target class="card1 text-center bg-dark text-light">
+<div #target class="card1 bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6></div>
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
+
+        <h6 class="m-25 text-center" style="color: lightslategrey;">Education</h6>
+        <hr style="width: 25%;margin: auto;color: #565558;">
+
+        <div style="padding-left: 2%;" class="mb-4 mt-2" *ngFor="let item of educationitems">
+            <div class="d-flex justify-content-left">
+                <h6 class="m-0">{{item.title}}</h6> <span style="padding-left: 9px; padding-top: 4px; font-size: 9px; color: rgb(134, 143, 152);">({{item.program}})</span>
+            </div>
+            <span style="padding-left: 2%; font-family: math; color: thistle">{{item.description}}</span> 
+            <strong style="font-size: x-small;" class="d-flex justify-content-end">{{item.dates}}</strong>
+        </div>        
+
         <h6 class="m-25 text-center" style="color: lightslategrey;">Certificates</h6>
         <hr style="width: 25%;margin: auto;color: #565558;">
         <div class="row mt-3">
