--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -61,29 +61,21 @@
         </div>
     </div>    
 </div>    
-<div #target class="card1 text-center bg-dark text-light" style="display:none;">
-    <div class="py-0 mycard card-body full-height-card">
-        <div class="grid-1">4</div>
-        <div class="grid-4">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <hr>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+<div #target class="card1 bg-dark text-light">
+    <div class="py-0 text-center mycard card-body full-height-card">
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Stack</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
+        <div class="mb-5" *ngFor="let array of stack">
+            <div class="my-2">
+                <h6 class="text-center" style="color: lightslategrey;">{{array.title}}</h6>
+                <hr style="width: 25%;margin: auto;color: #565558;">
+            </div>
+            <!-- <span *ngFor="let item of array.skill" class="badge" style="border: 1px #54B4D3 solid; background-color: #14171C; font-family: monospace; color: #69d202db; font-size: larger; margin-left: 15px; margin-top: 7px;">{{item}}</span> -->
+            <span *ngFor="let item of array.skill" class="badge" style="border: 1.75px darkcyan solid;background-color: #14171C;font-family: monospace;color: #cad7bddb;font-size: larger;margin-left: 15px;margin-top: 7px;">{{item}}</span>
         </div>
-        <div class="grid-1 row">
-            <div class="col-4 bg-danger"></div>
-            <div class="col-4 bg-warning"></div>
-            <div class="col-4 bg-info"></div>
-        </div>
-        <div class="grid-1">2</div>
-        <div class="grid-1">3</div>
-        <div class="grid-1">4</div>
-        <div class="grid-1">5</div>
-        <div class="grid-1">6</div>
+
     </div>    
 </div>  
-<div #target class="card1 bg-dark text-light">
+<div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
 
