--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -27,7 +27,7 @@
 </div>
 <div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Work / Projects</h6></div>
+        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6></div>
         <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
         <h6 class="m-25 text-center" style="color: lightslategrey;">Professional Experiences</h6>
         <hr style="width: 25%;margin: auto;color: #565558;">
@@ -61,9 +61,9 @@
         </div>
     </div>    
 </div>    
-<div #target class="card1 bg-dark text-light">
+<div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 text-center mycard card-body full-height-card">
-        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Stack</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Skills</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
         <div class="mb-5" *ngFor="let array of stack">
             <div class="my-2">
                 <h6 class="text-center" style="color: lightslategrey;">{{array.title}}</h6>
@@ -112,11 +112,14 @@
         </div>
     </div>    
 </div>  
-<div #target class="card1 text-center bg-dark text-light" style="display:none;">
+<div #target class="card1 text-center bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Get in Touch</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
+
+
         <div class="grid-1">5</div>
         <div class="grid-4">
-            <h5 class="card-title">Card title</h5>
+            <h5 class="card-title">Get in touch</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
             <a href="#" class="btn btn-primary">Go somewhere</a>
             <hr>
