--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -75,7 +75,7 @@
 
     </div>    
 </div>  
-<div #target class="card1 bg-dark text-light" style="display:none;">
+<div #target class="card1 bg-dark text-light" >
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
 
@@ -94,17 +94,20 @@
         <hr style="width: 25%;margin: auto;color: #565558;">
         <div class="row mt-3">
             <div class="col-12">
-                <div role="alert" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
+                <div role="alert" *ngFor="let certf of certificates" class="alert alert-info text-light" style="background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
                     <div class="row">
-                        <div class="col-4">
-                            <img class="certimgsize" src="https://www.w3schools.com/tags/img_girl.jpg" (click)="certfImg('https://www.w3schools.com/tags/img_girl.jpg')" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;">
-
+                        <div class="col-2">
+                            <img class="certimgsize" src="{{certf.imgurl}}" (click)="certfImg(certf.imgurl)" style="cursor: pointer; border-radius: 10px; border: 2px solid darkgray;">
                         </div>
-                        <div class="col-8">
-                            <a href="#" target="_blank" style="text-decoration: none; color: #9ad8dcdb;">Microsoft Learn</a>
-                            <span style="font-size: small">
-                                <p>.Net Core XYZ</p>
-                            </span>
+                        <div class="col-10">
+                            <div class="d-flex justify-content-between" style="color: #9ad8dcdb; margin-left: 5px">
+                                <span>{{certf.title}}</span>
+                                <span style="font-size: x-small;color: darkgray;">{{certf.company}}</span>
+                            </div>
+                            <div class="d-flex justify-content-between">
+                                <p style="font-size: smaller; margin-left: 15px" class="mt-1">{{certf.description}}</p>
+                                <a [href]="'https://' + certf.link" target="_blank" class="bi bi-box-arrow-up-right" style="margin-top: 9.5%; font-size: smaller; color: darkgray;"></a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -112,7 +115,7 @@
         </div>
     </div>    
 </div>  
-<div #target class="card1 text-center bg-dark text-light">
+<div #target class="card1 text-center bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Get in Touch</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
 
