--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -1,6 +1,7 @@
 <div #target class="card1 bg-dark text-light" style="display: none;">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div>
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
+        <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
         <div class="row">
             <!-- <div class="col-5 bg-info">test</div> -->
             <div class="col-12" style="display: grid; grid-template-rows: repeat(10, 51px);">
@@ -27,8 +28,8 @@
 </div>
 <div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
-        <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6></div>
-        <!-- <div class="grid-1 mt-3" style="border-bottom: 0.1rem solid #373434;"><h6>About Me</h6></div> -->
+        <!-- <div class="mt-3 mb-3" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6></div> -->
+        <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Works / Projects</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
         <h6 class="m-25 text-center" style="color: lightslategrey;">Professional Experiences</h6>
         <hr style="width: 25%;margin: auto;color: #565558;">
         <div class="my-2">
@@ -48,7 +49,7 @@
             <div class="col-12 col-md-6" *ngFor="let item of array; let i = index">
                 <div role="alert" class="alert alert-info text-light" style="cursor: pointer; background-color: #14171d; display: grid; grid-template-rows: repeat(5, 20px); padding: 5px 10px;"> 
                     <div class="grid-1" style="font-family: monospace;">
-                         <a href="{{item.clone_url}}" target="_blank" style="text-decoration: none; color: #69d202db;">{{ item.name }}</a>
+                         <a href="{{item.clone_url}}" target="_blank" style="color: #69d202db;">{{ item.name }}</a>
                     </div>
                     <div (click)="clickedrepo(item, i)" class="grid-4 text-secondary" style="margin: 3px 0 0 1.5%;">
                         <span style="font-size: small">
@@ -75,7 +76,7 @@
 
     </div>    
 </div>  
-<div #target class="card1 bg-dark text-light" >
+<div #target class="card1 bg-dark text-light" style="display:none;">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Resume / Certificates</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
 
@@ -115,28 +116,31 @@
         </div>
     </div>    
 </div>  
-<div #target class="card1 text-center bg-dark text-light" style="display:none;">
+<div #target class="card1 text-center bg-dark text-light">
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Get in Touch</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
-
-
-        <div class="grid-1">5</div>
-        <div class="grid-4">
-            <h5 class="card-title">Get in touch</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card’s content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
-            <hr>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+        <div class="row text-center mt-3">
+            <div class="col-12 col-md-4">
+                <img src="https://logos-world.net/wp-content/uploads/2020/04/Linkedin-Logo.png" alt="Girl in a jacket" width="200" height="100">
+                <div class="mt-3">
+                    <a style="text-decoration: none;font-size: 1rem;font-weight: 500;color: white;" target="_blank" href="https://www.linkedin.com/in/fatih--aydin/">My LinkedIn Profile</a>
+                    <i class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; cursor: pointer;"></i>
+                </div>
+            </div>
+            <div class="col-12 col-md-4">
+                <img src="https://pngimg.com/uploads/github/github_PNG23.png" alt="Girl in a jacket" width="275" height="100">
+                <div class="mt-3">
+                    <a style="text-decoration: none;font-size: 1rem;font-weight: 500; color: white;" target="_blank" href="https://github.com/FatihAydinn/">My GitHub Profile</a>
+                    <i class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; cursor: pointer;"></i>
+                </div>
+            </div>
+            <div class="col-12 col-md-4 mt-4">
+                <img src="https://brandlogos.net/wp-content/uploads/2025/04/gmail-logo_brandlogos.net_eqenr.png" alt="Girl in a jacket" width="200" height="50">
+                <div class="" style="margin-top: 15%;">
+                    <span style="font-size: 1rem; font-weight: 500;">a.fatihaydn&#64;gmail.com</span>
+                    <a href="mailto:a.fatihaydn@gmail.com" class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; color: white;"></a>
+                </div>
+            </div>
         </div>
-        <div class="grid-1 row">
-            <div class="col-4 bg-danger"></div>
-            <div class="col-4 bg-warning"></div>
-            <div class="col-4 bg-info"></div>
-        </div>
-        <div class="grid-1">2</div>
-        <div class="grid-1">3</div>
-        <div class="grid-1">4</div>
-        <div class="grid-1">5</div>
-        <div class="grid-1">6</div>
     </div>    
 </div>  
