--- a/src/app/content/content.component.html
+++ b/src/app/content/content.component.html
@@ -121,23 +121,23 @@
     <div class="py-0 mycard card-body full-height-card">
         <div class="mt-3 mb-3 d-flex justify-content-between" style="border-bottom: 0.1rem solid #373434;"><h6>Get in Touch</h6><a href="fatihaydin.pdf" rel="noopener noreferrer" target="_blank" style="text-decoration: none; font-size: small; font-weight: 700;">Download CV</a></div>
         <div class="row text-center mt-3">
-            <div class="col-12 col-md-4">
-                <img src="https://logos-world.net/wp-content/uploads/2020/04/Linkedin-Logo.png" alt="Girl in a jacket" width="200" height="100">
+            <div class="col-12 col-md-4 mt-4">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f8/LinkedIn_icon_circle.svg/1200px-LinkedIn_icon_circle.svg.png" width="200" height="100" style="width: 40%; height: 70%;">
                 <div class="mt-3">
                     <a style="text-decoration: none;font-size: 1rem;font-weight: 500;color: white;" target="_blank" href="https://www.linkedin.com/in/fatih--aydin/">My LinkedIn Profile</a>
                     <i class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; cursor: pointer;"></i>
                 </div>
             </div>
-            <div class="col-12 col-md-4">
-                <img src="https://pngimg.com/uploads/github/github_PNG23.png" alt="Girl in a jacket" width="275" height="100">
+            <div class="col-12 col-md-4 mt-4">
+                <img src="https://uxwing.com/wp-content/themes/uxwing/download/brands-and-social-media/github-white-icon.png" width="275" height="100" style="width: 40%; height: 70%;">
                 <div class="mt-3">
                     <a style="text-decoration: none;font-size: 1rem;font-weight: 500; color: white;" target="_blank" href="https://github.com/FatihAydinn/">My GitHub Profile</a>
                     <i class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; cursor: pointer;"></i>
                 </div>
             </div>
             <div class="col-12 col-md-4 mt-4">
-                <img src="https://brandlogos.net/wp-content/uploads/2025/04/gmail-logo_brandlogos.net_eqenr.png" alt="Girl in a jacket" width="200" height="50">
-                <div class="" style="margin-top: 15%;">
+                <img src="https://static.vecteezy.com/system/resources/thumbnails/016/716/465/small_2x/gmail-icon-free-png.png" style="width: 40%; height: 70%;">
+                <div class="mt-3">
                     <span style="font-size: 1rem; font-weight: 500;">a.fatihaydn&#64;gmail.com</span>
                     <a href="mailto:a.fatihaydn@gmail.com" class="bi bi-box-arrow-up-right" style="padding-left: 4%; font-size: x-small; color: white;"></a>
                 </div>
